--- a/views/common/cursors.ejs
+++ b/views/common/cursors.ejs
@@ -1,7 +1,7 @@
 <div class='cursors'>
   <% for (var i =0; i <20;  i++ ) { %>
-    <div class='cursor' id='cursor<%= i %>'></div> 
+    <div class='cursor' id='cursor<%= i %>' style="z-index: 10000000;"></div> 
   <% } %>
 </div>
 
-<img src="/img/common/check.svg" class="touchindicator" style="display: none; position:absolute; z-index: 1000"/>
+<img src="/img/common/check.svg" class="touchindicator" style="display: none; position:absolute; z-index: 10000000"/>
