--- a/views/rmk/partials/playerboxes.ejs
+++ b/views/rmk/partials/playerboxes.ejs
@@ -1,3 +1,3 @@
 <% for (var i = 0; i < 4;  i++ ) { %>
-  <div class="playerbox" id="player<%= i %>box" style="top: <%= playerboxStartPos[i].top %>px; left: <%= playerboxStartPos[i].left %>px"></div>
+  <div class="playerbox" id="player<%= i %>box" style="top: <%= playerboxStartPos[i].top %>px; left: <%= playerboxStartPos[i].left %>px; z-index: -1;"></div>
 <% } %>
