--- a/views/soc/pages/index.ejs
+++ b/views/soc/pages/index.ejs
@@ -9,6 +9,11 @@
       <%- include ('../partials/board'); -%>
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}); -%>
+      <%  var scoreboxValues = [1];
+          for (var i = 0; i < fixedPlayers; i++) { 
+            var id = i; -%>
+            <%- include('../../common/scorebox', {scoreboxId: id, scoreboxValues: scoreboxValues}); %>
+      <%  } -%>
       <%- include ('../partials/decks'); -%>
       <%- include ('../../common/cursors'); -%>
     </div>
