--- a/views/common/dice.ejs
+++ b/views/common/dice.ejs
@@ -1,4 +1,4 @@
-<div class='card dice' id="<%= id %>" style="width: <%= width; %>; height: <%= width; %>;">
+<div class='card dice' id="<%= id %>" style="width: <%= width; %>; height: <%= width; %>; transform: translateZ(<%= (width); %>px)">
   <div class='threeDcontainer' style="transform-origin: <%= width / 2; %>px <%= width / 2; %>px;">
     <div class='diceFace' style='width: <%= width; %>; height: <%= width; %>; transform: translateZ(<%= (width / 2); %>px)'>
       <span class='diceDot' style="width: <%= (width * 0.15)%>px; height: <%= (width * 0.15)%>px; border-radius: <%= ((width * 0.15) / 2)%>px; top: <%= (width * 0.425); %>; left: <%= (width * 0.425); %>"></span>
