--- a/views/soc/partials/decks.ejs
+++ b/views/soc/partials/decks.ejs
@@ -51,14 +51,14 @@
 
 <% for (var p = 0; p < 4; p++) { -%>
     <% for (var i = 0; i < 5; i++) { -%>
-        <div class='card settlement' id='settlement_<%= p %>_<%= i %>'><img class="settlementImg" src='/img/soc/house.svg'></div>
+        <div class='card pieceFor_<%= p %> settlement' id='settlement_<%= p %>_<%= i %>' style="display: none;"><img class="pieceImg" src='/img/soc/house.svg'></div>
     <% } -%>
 
     <% for (var i = 0; i < 4; i++) { -%>
-        <div class='card city' id='city_<%= p %>_<%= i %>'><img class="settlementImg" src='/img/soc/city.svg'></div>
+        <div class='card pieceFor_<%= p %> city' id='city_<%= p %>_<%= i %>' style="display: none;"><img class="pieceImg" src='/img/soc/city.svg'></div>
     <% } -%>
 
     <% for (var i = 0; i < 15; i++) { -%>
-        <div class='card road' id='road_<%= p %>_<%= i %>'><img class="settlementImg" src='/img/soc/road.svg'></div>
+        <div class='card pieceFor_<%= p %> road' id='road_<%= p %>_<%= i %>' style="display: none;"><img class="pieceImg" src='/img/soc/road.svg'></div>
     <% } -%>
 <% } -%>
