--- a/views/soc/partials/head.ejs
+++ b/views/soc/partials/head.ejs
@@ -96,11 +96,33 @@ body
   z-index: 0;
 }
 
+.resource img
+{
+  width: 65px;
+}
+
+.development img
+{
+  width: 90px;
+}
+
 .deck
 {
   background-color: grey;
   width: 117px;
   height: 165px;
+}
+
+.resourceDeck
+{
+  width: 78px;
+  height: 182px;
+}
+
+.developmentDeck
+{
+  width: 100px;
+  height: 222px;
 }
 
 .playcard
@@ -278,6 +300,8 @@ body
 {
   width: 260px;
   height: 170px;
+  background-color: transparent;
+  border: 2px solid black;
 }
 
 #dice1 .threeDcontainer
