--- a/views/soc/partials/head.ejs
+++ b/views/soc/partials/head.ejs
@@ -314,5 +314,63 @@ body
     transition: transform 3.5s;
 }
 
+#closedbox0
+{
+  position: fixed;
+  border: 2px solid #ff0000;
+}
+
+#building_costs
+{
+  background-color: #f4a460;
+  font-weight: bold;
+  color: black;
+  font-size: 15px;
+  border-radius: 5px;
+  width: 726px;
+}
+
+#building_costs td
+{
+  padding: 15px;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+#building_costs th
+{
+  padding: 15px;
+  font-weight: bold;
+  font-size: 35px;
+  border-bottom: 2px solid black;
+}
+
+#development_cards
+{
+  width: 500px;
+  background-color: #f4a460;
+  font-weight: bold;
+  color: black;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+#development_cards td
+{
+  padding: 5px;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+#longest_road, #largest_army
+{
+  padding: 10px;
+  background-color: black;
+  border: 3px solid white;
+  border-radius: 5px;
+  font-size: 20px;
+  color: #ffff00;
+}
+
 
 </style>
