--- a/views/soc/partials/decks.ejs
+++ b/views/soc/partials/decks.ejs
@@ -69,7 +69,7 @@
 <div class='card deck resourceDeck' id='wheatDeck'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 78px;" value='0'>Wheat</button></div>
 <div class='card deck resourceDeck' id='oreDeck'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 78px;" value='0'>Ore</button></div>
 
-<div class='card deck developmentDeck' id='developmentDeck0'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 132px;" value='0'>Development</button></div>
+<div class='card deck developmentDeck' id='developmentDeck0'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 132px;" value='0'>Development</button><div id='closedbox0'></div></div>
 
 <% for (var i = 0; i < 95;  i++ ) { %>
 	<div class='card resource' id='resource_<%= i %>'></div>
@@ -77,3 +77,7 @@
 <% for (var i = 0; i < 25;  i++ ) { %>
 	<div class='card development' id='development_<%= i %>'></div>
 <% } %>
+
+<%- include ('./building_costs'); -%>
+<%- include ('./victory_cards'); -%>
+<%- include ('./development_cards'); -%>
