--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -42,3 +42,8 @@
   <a href='soc'><img src='/img/soc/settlersOfCatan.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn8"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard9'>
+  <a href='pm'><img src='/img/pm/pickomino.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn9"><img src="/img/lobby/move.png"/></div>
