--- a/views/mp/partials/head.ejs
+++ b/views/mp/partials/head.ejs
@@ -16,11 +16,14 @@
 <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap'); */
 
 body
 {
   background-color: #040013;
   font-family: 'Anton', sans-serif;
+  /* font-family: 'Lexend Deca', sans-serif; */
+  /* font-family: sans-serif; */
   background-image: url('/img/mp/cloth.png');
   background-repeat: repeat;
 }
@@ -221,6 +224,11 @@ body
   box-shadow: 5px 5px;
 }
 
+.dice
+{
+  box-shadow: none;
+}
+
 .deck
 {
   background-color: rgba(128, 128, 128, 0.535);
@@ -324,5 +332,31 @@ body
   text-align: center;
 }
 
+#scoreboxauction
+{
+  top: 419px;
+  left:10px;
+}
+
+.pion
+{
+  box-shadow: none;
+}
+
+.house
+{
+  width: 20px;
+  height: 20px;
+  background-color: rgb(96, 255, 96);
+  border: 2px solid rgb(0, 84, 0);
+}
+
+.hotel
+{
+  width: 20px;
+  height: 20px;
+  background-color: rgb(255, 0, 0);
+  border: 2px solid rgb(199, 0, 0);
+}
 
 </style>
