--- a/views/common/welcomeModal.ejs
+++ b/views/common/welcomeModal.ejs
@@ -17,3 +17,17 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="resetWebcamModal" tabindex="-1" role="dialog" aria-labelledby="resetWebcamModalModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" id="resetWebcamBtn" class="btn btn-primary btn-lg" style="width: 166px;">RESET Webcam</button>
+        </div>
+      </div>
+      <div class="modal-footer">
+        
+      </div>
+    </div>
+  </div>
+</div>
