--- a/views/dx/partials/head.ejs
+++ b/views/dx/partials/head.ejs
@@ -174,7 +174,8 @@ body
 .cardOpenbox
 {
   position: absolute;
-  top: 236px;
+  /* top: 236px; */
+  top: 0px;
   left: 320px;
 }
 
@@ -237,6 +238,15 @@ body
   left: 480px;
   width: 1440px;
   height: 540px;
+}
+
+.scoring
+{
+  color: white;
+  position: absolute;
+  font-size: 25px;
+  top: 1090px;
+  left: 10px;
 }
 
 
