--- a/views/common/webcams.ejs
+++ b/views/common/webcams.ejs
@@ -9,7 +9,7 @@
 <% } %>
 
 <% for (var i = fixedPlayers; i <20;  i++ ) { %>
-  <div class="webcambox" id='webcambox<%= i %>'>
+  <div class="webcambox moveable" id='webcambox<%= i %>'>
     <div class='webcamContainer'>
       <div id="webcam<%= i %>"></div>
       <div class="micContainer" id="micContainer<%= i %>" style="display: none;">
