shared radio WIP

--- a/views/common/resetModal.ejs
+++ b/views/common/resetModal.ejs
@@ -6,7 +6,8 @@
       <div class="modal-footer">
         <button type="button" id="resetGameBtn" class="btn btn-primary btn-lg" style="width: 110px;">RESET</button><br>
         <button type="button" id="takeSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Take Snapshot</button>
-        <button type="button" id="recoverSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Recover Snapshot</button>
+        <button type="button" id="recoverSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Recover Snapshot</button><br>
+        <button type="button" id="startCaptureBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Capture</button>
       </div>
     </div>
   </div>
