--- a/views/cah/partials/webcams.ejs
+++ b/views/cah/partials/webcams.ejs
@@ -1,5 +1,5 @@
 <% for (var i =0; i <20;  i++ ) { %>
-  <div class='playerbox' id='player<%= i %>box'>
+  <div class='playerbox moveable' id='player<%= i %>box'>
   <div class="webcambox" id='webcambox<%= i %>'>
     <div class='webcamContainer'>
       <div id="webcam<%= i %>"></div>
