--- a/views/cn/partials/head.ejs
+++ b/views/cn/partials/head.ejs
@@ -18,6 +18,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 body
 {
   background-color: #000a0f;
