--- a/views/ctd/partials/head.ejs
+++ b/views/ctd/partials/head.ejs
@@ -14,6 +14,14 @@
 <script src="/js/bundle.js"></script>
 
 <style>
+  img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
   body
   {
     background-color: #100900;
