--- a/views/dx/partials/head.ejs
+++ b/views/dx/partials/head.ejs
@@ -17,6 +17,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 body
 {
   background-color: #040013;
