--- a/views/strg/partials/head.ejs
+++ b/views/strg/partials/head.ejs
@@ -15,6 +15,14 @@
 
 <style>
 
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 body
 {
   background-color: #424242;
