--- a/views/sy/partials/head.ejs
+++ b/views/sy/partials/head.ejs
@@ -12,6 +12,15 @@
 <script src="/js/bundle.js"></script>
 
 <style>
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+
 	body
 	{
 		overflow: hidden;
