--- a/views/cah/partials/head.ejs
+++ b/views/cah/partials/head.ejs
@@ -18,7 +18,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
-img {
+img, html
+{
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
