--- a/views/mk/partials/head.ejs
+++ b/views/mk/partials/head.ejs
@@ -17,7 +17,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
-img {
+img, html {
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
