--- a/views/sy/partials/head.ejs
+++ b/views/sy/partials/head.ejs
@@ -12,7 +12,7 @@
 <script src="/js/bundle.js"></script>
 
 <style>
-img {
+img, html {
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
