--- a/views/cah/pages/index.ejs
+++ b/views/cah/pages/index.ejs
@@ -3,6 +3,7 @@
     <%- include ("../partials/head") %>
   </head>
   <body>
+    <%- include ('../../common/resetWebcamModal'); -%>
     <%- include ('../../common/resetModal'); -%>
     <div class="scaleplane">
       <%- include ('../partials/webcams'); -%>
