--- a/views/lobby/pages/index.ejs
+++ b/views/lobby/pages/index.ejs
@@ -4,6 +4,7 @@
 	</head>
 	<body>
 		<%- include ('../../common/resetModal'); -%>
+		<%- include ('../../common/resetWebcamModal'); -%>
 		<div class="scaleplane">
 			<%  var i = 0;
 				for (game in gameInfo) { -%>
