--- a/views/soc/pages/index.ejs
+++ b/views/soc/pages/index.ejs
@@ -4,7 +4,9 @@
   </head>
   <body>
     <%- include ('../../common/welcomeModal'); -%>
+    <%- include ('../../common/resetWebcamModal'); -%>
     <%- include ('../../common/resetModal'); -%>
+    
     <div class="scaleplane">
       <%- include ('../partials/board'); -%>
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
