--- a/views/strg/pages/index.ejs
+++ b/views/strg/pages/index.ejs
@@ -4,6 +4,7 @@
   </head>
   <body>
     <%- include ('../../common/resetModal'); -%>
+    <%- include ('../../common/resetWebcamModal'); -%>
     <div class="scaleplane">
       <%- include ('../partials/playerPlane') %>
       <%- include ('../partials/board') %>
