--- a/views/dx/pages/index.ejs
+++ b/views/dx/pages/index.ejs
@@ -4,6 +4,7 @@
   </head>
   <body>
     <%- include ('../../common/welcomeModal'); -%>
+    <%- include ('../../common/resetWebcamModal'); -%>
     <%- include ('../../common/resetModal'); -%>
     <div class="scaleplane">
       <img class="cardOpenbox" src="/img/dx/openbox.svg"/>
