--- a/views/fkar/pages/index.ejs
+++ b/views/fkar/pages/index.ejs
@@ -4,6 +4,7 @@
   </head>
   <body>
     <%- include ('../../common/welcomeModal'); -%>
+    <%- include ('../../common/resetWebcamModal'); -%>
     <%- include ('../../common/resetModal'); -%>
     
     <div class="scaleplane">
