--- a/views/mk/pages/index.ejs
+++ b/views/mk/pages/index.ejs
@@ -4,6 +4,7 @@
   </head>
   <body>
     <%- include ('../../common/welcomeModal'); -%>
+    <%- include ('../../common/resetWebcamModal'); -%>
     <%- include ('../../common/resetModal'); -%>
     <div class="scaleplane">
       <div style="position: absolute; top: 1080px; left: 0px; z-index: -100; opacity: 0; height: 170px;"></div>
