radio controls and other fixes

--- a/views/common/cursors.ejs
+++ b/views/common/cursors.ejs
@@ -1,3 +1,8 @@
+<div class='radioControls' style="position: absolute;top:10px;left:1930px; display: none;">
+  <input id="radioVolumeControl" class="form-range" type="range" orient="vertical" style="writing-mode: bt-lr;-webkit-appearance: slider-vertical; width: 8px;height: 120px;padding: 0 5px;-webkit-user-select: all;-khtml-user-select: all;-moz-user-select: all;-o-user-select: all;user-select: all;"/>
+  <img class="radioIcon" src="/img/common/radio.svg" style="position: absolute; z-index: 4; display: block; top: 0px; left: 20px;"/>
+  <img id="radioStop" src="/img/common/stop.svg" style="position: absolute; z-index: 4; display: block; top: 60px;left:20px;"/>
+</div>
 <div class='cursors'>
   <% for (var i =0; i <20;  i++ ) { %>
     <div class='cursor' id='cursor<%= i %>' style="z-index: 99999;"></div> 
