--- a/views/sh/partials/ballots.ejs
+++ b/views/sh/partials/ballots.ejs
@@ -1,7 +1,7 @@
 <div>
 	<% for (var i =0; i <10;  i++ ) { %>
-		<div class='card ballot' id='ballotja<%= i %>'><img src='/img/sh/ja-l.png'/></div>
-		<div class='card ballot' id='ballotnein<%= i %>'><img src='/img/sh/nein-l.png'/></div> 
+		<div class='card ballot' id='ballotja<%= i %>' style="display: none;"><img src='/img/sh/ja-l.png'/></div>
+		<div class='card ballot' id='ballotnein<%= i %>' style="display: none;"><img src='/img/sh/nein-l.png'/></div> 
 	<% } %>
 <div class='card token' id='presidenttoken'><img src='/img/sh/president-token.png'></div>
 <div class='card token' id='chancellortoken'><img src='/img/sh/chancellor-token.png'></div>
