--- a/views/ctd/partials/head.ejs
+++ b/views/ctd/partials/head.ejs
@@ -15,11 +15,16 @@
 
 <style>
   img, html {
-  -webkit-user-select: none;
+  -webkit-user-select:none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
-  user-select: none;
+  user-select:none;
+  -webkit-user-drag: none; 
+  -khtml-user-drag: none; 
+  -moz-user-drag: none; 
+  -o-user-drag: none; 
+  user-drag: none; 
 }
 
   body
