--- a/views/fkar/partials/head.ejs
+++ b/views/fkar/partials/head.ejs
@@ -21,6 +21,11 @@
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
+  -webkit-user-drag: none; 
+  -khtml-user-drag: none; 
+  -moz-user-drag: none; 
+  -o-user-drag: none; 
+  user-drag: none; 
 }
 
   body
