--- a/views/mk/partials/head.ejs
+++ b/views/mk/partials/head.ejs
@@ -23,6 +23,11 @@ img, html {
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
+  -webkit-user-drag: none; 
+  -khtml-user-drag: none; 
+  -moz-user-drag: none; 
+  -o-user-drag: none; 
+  user-drag: none; 
 }
 
 body
