--- a/views/cah/partials/webcams.ejs
+++ b/views/cah/partials/webcams.ejs
@@ -3,6 +3,14 @@
   <div class="webcambox" id='webcambox<%= i %>'>
     <div class='webcamContainer'>
       <div id="webcam<%= i %>"></div>
+      <div class="micContainer" id="micContainer<%= i %>" style="display: none;">
+        <img class="mic" src="/img/common/mic.svg" style="position: absolute; z-index: 4; display: block; right: 0px; bottom: 0px;"/>
+        <img class="mute mic" src="/img/common/forbidden.svg" style="position: absolute; z-index: 5; display: none; right: 0px; bottom: 0px;"/>
+        <div id="latency<%= i %>" style="position: absolute; bottom: 5px; right: 80px; z-index: 5"></div>
+      </div>
+      <div class="radioContainer" id="radioContainer<%= i %>" style="display: none">
+        <img class="playerRadio" player="<%= i %>" src="/img/common/radio.svg" style="position: absolute; z-index: 4; display: block; left: 0px; bottom: 0px;"/>
+      </div>
     </div>
   </div>
 </div>
