--- a/views/cah/partials/webcams.ejs
+++ b/views/cah/partials/webcams.ejs
@@ -16,3 +16,4 @@
 </div>
   <div class="card moveBtn" id="webcamMoveBtn<%= i %>"><img src="/img/lobby/move.png"/></div>
 <% } %>
+<div id="radio" style="display: none;"></div>
