--- a/views/dx/pages/index.ejs
+++ b/views/dx/pages/index.ejs
@@ -32,6 +32,7 @@
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}); -%>
       <%- include ('../partials/decks') %>
+      <%- include ('../partials/touchboxes') %>
       <%  var scoreboxValues = [1];
           for (var i = 0; i < fixedPlayers; i++) { 
             var id = i; -%>
