--- a/views/tls/partials/drawplane.ejs
+++ b/views/tls/partials/drawplane.ejs
@@ -1,4 +1,5 @@
 <div id="drawplane">
+  <div class="countdown">30</div>
   <div class="drawText">Draw a: <span id="word">TEST</span></div>
   <canvas id="tlsDrawCanvas" width="700" height="900"></canvas>
 </div>
