--- a/views/tls/partials/guessplane.ejs
+++ b/views/tls/partials/guessplane.ejs
@@ -5,4 +5,5 @@
     <input type="text" id="guess" name="guess">
     <button class="btn btn-primary" id="submitGuessBtn">Submit</button>
   </div>
+  <div class="countdown">45</div>
 </div>
