--- a/views/tls/partials/head.ejs
+++ b/views/tls/partials/head.ejs
@@ -370,10 +370,106 @@
   .countdown
   {
     color: red;
-    font-size: 60px;
+    font-size: 80px;
     font-weight: bold;
     position: absolute;
     top: 32px;
-    left: 32px;
+    left: 51px;
   }
+
+  #colorTable
+  {
+    position: absolute;
+    left: 0px;
+    top: 400px;
+  }
+
+  .lineThickness
+  {
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid #CCCCCC;
+    width: 189px;
+    height: 45px;
+    left: 6px;
+    position: absolute;
+  }
+
+  #t0
+  {
+    top: 180px;
+  }
+  #t1
+  {
+    top: 225px;
+  }
+  #t2
+  {
+    top: 270px;
+  }
+  #t3
+  {
+    top: 315px;
+  }
+
+  .ctd {
+    margin: 2px;
+  }
+
+  #scorebox0
+{
+  top: 249px;
+  left: 188px;
+}
+
+#scorebox1
+{
+  top: 889px;
+  left: 1859px;
+}
+
+#scorebox2
+{
+  top: 569px;
+  left: 188px;
+}
+
+#scorebox3
+{
+  top: 569px;
+  left: 1859px;
+}
+
+#scorebox4
+{
+  top: 889px;
+  left: 188px;
+}
+
+#scorebox5
+{
+  top: 249px;
+  left: 1859px;
+}
+#scorebox6
+{
+  top: 179px;
+  left: 448px;
+}
+#scorebox7
+{
+  top: 959px;
+  left: 448px;
+}
+#scorebox8
+{
+  top: 179px;
+  left: 1598px;
+}
+#scorebox9
+{
+  top: 959px;
+  left: 1598px;
+}
+
 </style>
