--- a/views/common/resetModal.ejs
+++ b/views/common/resetModal.ejs
@@ -8,6 +8,7 @@
         <button type="button" id="takeSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Take Snapshot</button>
         <button type="button" id="recoverSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Recover Snapshot</button><br>
         <button type="button" id="startCaptureBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Capture</button>
+        <button type="button" id="startWatchPartyBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Watch Party</button>
       </div>
     </div>
   </div>
