tls multi-language

--- a/views/tls/pages/index.ejs
+++ b/views/tls/pages/index.ejs
@@ -8,7 +8,8 @@
     <%- include ('../../common/resetModal'); -%>
     
     <div class="scaleplane">
-      <button id="startGameBtn">Start Game</button>
+      <button id="startGameBtnEN">Start Game (EN)</button></br>
+      <button id="startGameBtnNL">Start Game (NL)</button>
       <%- include ("../partials/drawplane") %>
       <%- include ("../partials/guessplane") %>
       <%- include ("../partials/playerboxes") %>
