disable webcams, fix tls

--- a/views/common/resetModal.ejs
+++ b/views/common/resetModal.ejs
@@ -8,7 +8,9 @@
         <button type="button" id="takeSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Take Snapshot</button>
         <button type="button" id="recoverSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Recover Snapshot</button><br>
         <button type="button" id="startCaptureBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Capture</button>
-        <button type="button" id="startWatchPartyBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Watch Party</button>
+        <button type="button" id="startWatchPartyBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Watch Party</button><br>
+        <button type="button" id="pauseBtn" class="btn btn-primary btn-lg" style="width: 180px;">Pause</button>
+        <button type="button" id="resumeBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Resume</button>
       </div>
     </div>
   </div>
