selectable webcams, fix tls

--- a/views/strg/partials/head.ejs
+++ b/views/strg/partials/head.ejs
@@ -10,6 +10,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src='/js/bootstrap.min.js'></script>
+<script>var useWebcams = <%= useWebcams %> </script>
 <script src="/js/strg/strg.js"></script>
 <script src="/js/bundle.js"></script>
 
