--- a/views/mainpage/partials/createModal.ejs
+++ b/views/mainpage/partials/createModal.ejs
@@ -4,12 +4,13 @@
     	<form action="/api/create/" method="post">
 	      <div class="modal-body">
 
-	          <div class="form-group">
-			    <label for="nameInput">Name:</label>
-			    <input type="name" class="form-control" id="nameCreate" name="nameCreate" aria-describedby="nameHelp" placeholder="Enter a name so your friends can find you.">
-			    <label for="nameInput">Pass:</label>
-			    <input type="name" class="form-control" id="passCreate" name="passCreate" aria-describedby="nameHelp" placeholder="Enter a password to keep scary people away. Share it with your friends.">
-			</div>
+	        <div class="form-group">
+						<label for="nameInput">Name:</label>
+						<input type="name" class="form-control" id="nameCreate" name="nameCreate" aria-describedby="nameHelp" placeholder="Enter a name so your friends can find you.">
+						<label for="nameInput">Pass:</label>
+						<input type="name" class="form-control" id="passCreate" name="passCreate" aria-describedby="nameHelp" placeholder="Enter a password to keep scary people away. Share it with your friends.">
+						<input type="checkbox" id="useWebcams" name="useWebcams" checked="true"> Use Webcams
+					</div>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="submit" id="createRoomBtn" class="btn btn-success btn-lg">Create Room</button>
