--- a/views/sy/partials/head.ejs
+++ b/views/sy/partials/head.ejs
@@ -8,6 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src='/js/bootstrap.min.js'></script>
+<script>var useWebcams = <%= useWebcams %> </script>
 <script src="/js/sy/sy.js"></script>
 <script src="/js/bundle.js"></script>
 
