--- a/views/common/resetWebcamModal.ejs
+++ b/views/common/resetWebcamModal.ejs
@@ -1,13 +1,41 @@
 <div class="modal fade" id="resetWebcamModal" tabindex="-1" role="dialog" aria-labelledby="resetWebcamModalModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-body">
-          <button type="button" id="resetWebcamBtn" class="btn btn-primary btn-lg" style="width: 166px;">RESET Webcam</button>
-          </div>
-        </div>
-        <div class="modal-footer">
-          
-        </div>
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" id="resetWebcamBtn" class="btn btn-primary btn-lg" style="width: 166px;">RESET Webcam</button>
+      </div>
+      <!-- </div> -->
+      <div class="modal-footer">
+        
       </div>
     </div>
   </div>
+</div>
+<div class="modal fade" id="offlineModal" tabindex="-1" role="dialog" aria-labelledby="offlineModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        Oops, you appear te be offline. Please check your internet connection.<br>
+        Reload this page if needed.
+      </div>
+      <!-- </div> -->
+      <div class="modal-footer">
+        
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="webcamErrorModal" tabindex="-1" role="dialog" aria-labelledby="webcamErrorModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        Oops, there was an error starting your webcam:<br>
+        <span id='webcamError'></span>
+      </div>
+      <!-- </div> -->
+      <div class="modal-footer">
+        
+      </div>
+    </div>
+  </div>
+</div>
