--- a/views/common/resetWebcamModal.ejs
+++ b/views/common/resetWebcamModal.ejs
@@ -39,3 +39,17 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="playResetModal" tabindex="-1" role="dialog" aria-labelledby="playResetModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <span id='playError'></span><br>
+        <button type="button" id="resetPlayingWebcams" class="btn btn-primary btn-lg" style="width: 166px;">Fix</button>
+      </div>
+      <!-- </div> -->
+      <div class="modal-footer">
+        
+      </div>
+    </div>
+  </div>
+</div>
