--- a/views/common/resetWebcamModal.ejs
+++ b/views/common/resetWebcamModal.ejs
@@ -6,7 +6,7 @@
       </div>
       <!-- </div> -->
       <div class="modal-footer">
-        
+        <div id="webcamMatrix"></div>
       </div>
     </div>
   </div>
