--- a/views/crp/partials/head.ejs
+++ b/views/crp/partials/head.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/head.ejs -->
 <meta charset="UTF-8">
 <!-- <meta name="viewport" content="width=device-width,user-scalable=no"> -->
-<title>Cockroach Poker Sandboard</title>
+<title>Cockroach Poker</title>
 
 <!-- Bootstrap CSS -->
 <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
