--- a/views/common/resetModal.ejs
+++ b/views/common/resetModal.ejs
@@ -10,7 +10,8 @@
         <button type="button" id="startCaptureBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Capture</button>
         <button type="button" id="startWatchPartyBtn" class="btn btn-success btn-lg" style="width: 180px;">Start Watch Party</button><br>
         <button type="button" id="pauseBtn" class="btn btn-primary btn-lg" style="width: 180px;">Pause</button>
-        <button type="button" id="resumeBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Resume</button>
+        <button type="button" id="resumeBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Resume</button><br>
+        <button type="button" id="shuffleSeating" class="btn btn-primary btn-lg" style="width: 180px;">Shuffle Seating</button>
       </div>
     </div>
   </div>
