--- a/views/crp/partials/decks.ejs
+++ b/views/crp/partials/decks.ejs
@@ -1,4 +1,7 @@
-<div class='card deck' id='cardDeck'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 78px;" value='20'>Shuffle</button></div>
+<div class='card deck' id='cardDeck'>
+    <button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 78px;" value='20'>Shuffle</button>
+    <button type="button" class="btn btn-secondary btn-lg autoDealButton" style="width: 100px;">Auto-Deal</button>
+</div>
 <% for (var i = 0; i < 64; i++) { -%>
     <div class='card door' id='card<%= i %>'><img src='/img/crp/bf.png'></div>
 <% } -%>
