--- a/views/mainpage/partials/createModal.ejs
+++ b/views/mainpage/partials/createModal.ejs
@@ -8,7 +8,7 @@
 						<label for="nameInput">Name:</label>
 						<input type="name" class="form-control" id="nameCreate" name="nameCreate" aria-describedby="nameHelp" placeholder="Enter a name so your friends can find you.">
 						<label for="nameInput">Pass:</label>
-						<input type="name" class="form-control" id="passCreate" name="passCreate" aria-describedby="nameHelp" placeholder="Enter a password to keep scary people away. Share it with your friends.">
+						<input type="name" class="form-control" id="passCreate" name="passCreate" aria-describedby="nameHelp" placeholder="Enter a password to keep unwanted people away. Share it with your friends.">
 						<input type="checkbox" id="useWebcams" name="useWebcams" checked="true"> Use Webcams
 					</div>
 	      </div>
